# geometrout

./: LICENSE  README.md  setup.cfg
geometrout/: __init__.py  _version.py  pointcloud.py  primitive.py  transform.py  utils.py
tests/: test_transform.py
