[metadata]
name = geometrout
version = 0.0.2.4
description = A collection of geometric methods and concepts tailored to machine learning for robotics
license = MIT
download_url = https://github.com/fishbotics/geometrout/archive/refs/tags/v0.0.2.4.tar.gz

[options]
packages = geometrout
python_requires = >=3.6
install_requires =
    numpy
    pyquaternion
