[metadata]
name = geometrout
version = 0.1.0.3
description = A collection of geometric methods and concepts tailored to machine learning for robotics
license = MIT
download_url = https://github.com/fishbotics/geometrout/archive/refs/tags/v0.1.0.3.tar.gz

[options]
packages = geometrout
python_requires = >=3.6
install_requires =
    numpy
    numba >= 0.56.4
