[metadata]
name = geometrout
version = 0.1.0.11
description = A collection of geometric methods and concepts tailored to machine learning for robotics
long_description = This is a high-performance set of tools used for CPU-based geometric processing in Python. By-in-large, these are simple methods, written with Numpy and Numba. These tools were designed for Machine Learning and Robotics, but could feasibly be used for any 3D processing task.
license = MIT

[options]
packages = geometrout
python_requires = >=3.6
install_requires =
    numpy
    numba >= 0.56.4
